@@ -2,6 +2,7 @@ v0.6 - Pending
 	+ Add support for playlists (save, load, queue, delete)
 	+ Ability to use local image for album cover
 	+ Add Ctrl-U and Ctrl-Shift-U for updating library (see docs)
+	+ Fetch cover art if an artist, but not album, is specified
 	+ (Re-)display systray icon if tray is (re-)opened
 	+ Fix mpdclient3.py to return all playlist objects
 	+ Bug: Delete key doesn't remove songs from playlist
